--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <center>
-        <h1 class="title">
+        <div class="title">
             로 또 명 당
-        </h1>
+        </div>
 
     </center>
 
