--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/nanumpenscript.css">
     <link rel="stylesheet" href="style.css">
     <center>
         <div class="title">
-            로 또 명 당
+            <a href="https://lottery1.netlify.app" class="title">로 또 명 당</a>
         </div>
 
     </center>
