--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/nanumpenscript.css">
-    <link rel="stylesheet" href="style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css" type="text/css">
     <center>
         <div class="title">
-            <a href="https://lottery1.netlify.app" class="title">로 또 명 당</a>
+
+            <a href="https://lottery1.netlify.app" class="title">
+                로 또 명 당</a>
+
         </div>
 
     </center>
