--- a/index.html
+++ b/index.html
@@ -16,11 +16,28 @@
 
     </center>
     <meta name="naver-site-verification" content="24db331c21f56e77e5c0a033751f4074c084b290" />
+    <link rel="canonical" href="https://lottery1.netlify.app">
+    <title>홍지니어의 로또명당</title>
+    <meta name="description" content="로또 번호를 추천해주는 사이트">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="홍지니어의 로또명당">
+    <meta property="og:description" content="로또 번호를 추천해주는 사이트">
+
+    <meta property="og:url" content="https://lottery1.netlify.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="홍지니어의 로또명당">
+    <meta property="og:description" content="로또 번호를 추천해주는 사이트">
+
+    <meta property="og:url" content="https://lottery1.netlify.app">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="홍지니어의 로또명당">
+    <meta name="twitter:description" content="로또 번호를 추천해주는 사이트">
+
+    <meta name="twitter:domain" content="홍지니어의 로또명당">
 
 </head>
-  
-    
-    
+
 <body>
 
     <div class="line1">
