--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="twitter:description" content="로또 번호를 추천해주는 사이트">
 
     <meta name="twitter:domain" content="홍지니어의 로또명당">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="">
 
 </head>
 
