--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <meta name="twitter:domain" content="홍지니어의 로또명당">
     <meta name="viewport" content="width = device-width">
+    <meta name="robots" content="index,follow">
 
 </head>
 
