--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     </center>
     <meta name="naver-site-verification" content="24db331c21f56e77e5c0a033751f4074c084b290" />
-    <link rel="canonical" href="https://lottery1.netlify.app">
+    <link rel="canonical" href="http://www.mysite.com/article/article1.html ">
     <title>홍지니어의 로또명당</title>
     <meta name="description" content="로또 번호를 추천해주는 사이트">
 
