--- a/index.html
+++ b/index.html
@@ -8,37 +8,15 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <center>
         <div class="title">
-
             <a href="https://lottery1.netlify.app" class="title">
                 로 또 명 당</a>
-
         </div>
-
     </center>
-    
-    
+
     <meta name="naver-site-verification" content="24db331c21f56e77e5c0a033751f4074c084b290" />
-    <link rel="canonical" href="http://www.mysite.com/article/article1.html">
+    <link rel="canonical" href="https://lottery1.netlify.app/" />
     <title>홍지니어의 로또명당</title>
     <meta name="description" content="로또 번호를 추천해주는 사이트">
-
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="홍지니어의 로또명당">
-    <meta property="og:description" content="로또 번호를 추천해주는 사이트">
-
-    <meta property="og:url" content="https://lottery1.netlify.app">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="홍지니어의 로또명당">
-    <meta property="og:description" content="로또 번호를 추천해주는 사이트">
-
-    <meta property="og:url" content="https://lottery1.netlify.app">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="홍지니어의 로또명당">
-    <meta name="twitter:description" content="로또 번호를 추천해주는 사이트">
-
-    <meta name="twitter:domain" content="홍지니어의 로또명당">
-    <meta name="viewport" content="width = device-width">
-    <meta name="robots" content="index,follow">
 
 </head>
 
@@ -55,35 +33,28 @@
     </div>
 
     <div class="line2">
-
         <ul>
             <li class="ball-placeholder"></li>
             <li class="ball-placeholder"></li>
             <li class="ball-placeholder"></li>
         </ul>
-
     </div>
 
     <div class="line1">
-
         <ul class="line1">
             <li class="ball-placeholder lottery1"></li>
             <li class="ball-placeholder lottery2"></li>
             <li class="ball-placeholder lottery3"></li>
 
         </ul>
-
     </div>
 
     <div class="line2">
-
         <ul class="line2">
             <li class="ball-placeholder lottery4"></li>
             <li class="ball-placeholder lottery5"></li>
             <li class="ball-placeholder lottery6"></li>
-
         </ul>
-
     </div>
 
     <button class="next-ball">실행하기</button>
